--- a/Etude_de_cas_Waze_1.ipynb
+++ b/Etude_de_cas_Waze_1.ipynb
@@ -48,7 +48,7 @@
         "#\n",
         "# **Partie 3 :** Création de visualisations\n",
         "#\n",
-        "# **Partie 4 :** Évaluation et partage des résulta\n"
+        "# **Partie 4 :** Évaluation et partage des résultats\n"
       ],
       "metadata": {
         "id": "mhOmJHFFUqtN"
